[package]
name = "echo-http"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1", features = ["full"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

