[package]
name = "echo-http"
version = "0.1.0"
edition = "2021"
authors = ["Giuseppe Gelardi <giuseppegelardi@icloud.com>"]
license = "MIT"
description = "Axios like http client for the typescipt devs that just can't let go"
homepage = "https://github.com/giuseppe-g-gelardi/echo-http"
repository = "https://github.com/giuseppe-g-gelardi/echo-http"
documentation = "TODO: https://docs.rs/cargobase"
readme = "README.md"
keywords = ["http", "client", "axios"]
categories = ["networking", "http", "utilities", "web", "client"]

[dependencies]
once_cell = "1.20.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1", features = ["full"] }

[lib]
path = "src/lib.rs"
