[package]
name = "echo_http"
version = "0.1.2"
edition = "2021"
authors = ["Giuseppe Gelardi <giuseppegelardi@icloud.com>"]
license = "MIT"
description = "Axios like http client for the typescipt devs that just can't let go"
homepage = "https://github.com/giuseppe-g-gelardi/echo_http"
repository = "https://github.com/giuseppe-g-gelardi/echo_http"
documentation = "https://docs.rs/echo_http"
readme = "README.md"
keywords = ["http", "client", "axios", "reqwest", "serde"]
categories = ["network-programming", "web-programming"]

[dependencies]
async-trait = "0.1.86"
once_cell = "1.20.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lib]
path = "src/lib.rs"

[workspace]
members = ["examples/*"]

[[test]]
name = "headers"
path = "tests/headers.rs"

[[test]]
name = "http"
path = "tests/http.rs"

[[test]]
name = "request"
path = "tests/request.rs"

[[test]]
name = "response"
path = "tests/response.rs"

